# dirview

./: .gitignore  CMakeLists.txt  README.md  dirview.pro
.github/workflows/: build.yml  package.yml
debian/: changelog  control  install
debian/patches/: dirview-features.patch
src/: FileSystemModel.cpp  FileSystemModel.h  MainWindow.cpp  MainWindow.h  main.cpp
